--- a/index.html
+++ b/index.html
@@ -759,6 +759,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/bitbucket/issues-raw/atlassian/python-bitbucket.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues-raw/atlassian/python-bitbucket.svg</code></td>
   </tr>
+  <tr><th> Bitbucket open pull requests: </th>
+    <td><img src='https://img.shields.io/bitbucket/pr/osrf/gazebo.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/pr/osrf/gazebo.svg</code></td>
+  </tr>
+  <tr><th data-keywords='Bitbucket'></th>
+    <td><img src='https://img.shields.io/bitbucket/pr-raw/osrf/gazebo.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/pr-raw/osrf/gazebo.svg</code></td>
+  </tr>
   <tr><th> WordPress rating: </th>
     <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
