--- a/try.html
+++ b/try.html
@@ -830,6 +830,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/size/webcaetano/craft/build/phaser-craft.min.js.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/size/webcaetano/craft/build/phaser-craft.min.js.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub search hit counter' data-doc='githubDoc'> Github search hit counter: </th>
+    <td><img src='/github/search/torvalds/linux/goto.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/search/torvalds/linux/goto.svg</code></td>
+  </tr>
   <tr><th> Bitbucket issues: </th>
     <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
