Add project as default.

--- a/try.html
+++ b/try.html
@@ -658,9 +658,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/gratipay/user/dougwilson.svg' alt=''/></td>
     <td><code>https://img.shields.io/gratipay/user/dougwilson.svg</code></td>
   </tr>
-  <tr><th> Gratipay Team: </th>
+  <tr><th> Gratipay Project: </th>
     <td><img src='/gratipay/team/shields.svg' alt=''/></td>
-    <td><code>https://img.shields.io/gratipay/team/shields.svg</code></td>
+    <td><code>https://img.shields.io/gratipay/project/shields.svg</code></td>
   </tr>
   <tr><th> Bountysource: </th>
     <td><img src='/bountysource/team/mozilla-core/activity.svg' alt=''/></td>
