--- a/try.html
+++ b/try.html
@@ -654,12 +654,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 
 <h3 id="miscellaneous"> Miscellaneous </h3>
 <table class='badge'><tbody>
-  <tr><th> Gratipay User: </th>
-    <td><img src='/gratipay/user/dougwilson.svg' alt=''/></td>
-    <td><code>https://img.shields.io/gratipay/user/dougwilson.svg</code></td>
-  </tr>
-  <tr><th> Gratipay Project: </th>
-    <td><img src='/gratipay/team/shields.svg' alt=''/></td>
+  <tr><th> Gratipay: </th>
+    <td><img src='/gratipay/project/shields.svg' alt=''/></td>
     <td><code>https://img.shields.io/gratipay/project/shields.svg</code></td>
   </tr>
   <tr><th> Bountysource: </th>
