--- a/try.html
+++ b/try.html
@@ -690,6 +690,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/codeclimate/issues/github/me-and/mdf.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/issues/github/me-and/mdf.svg</code></td>
   </tr>
+  <tr><th> Codetally:</th>
+    <td><img src='/codetally/triggerman722/colorstrap.svg' alt=''/></td>
+    <td><code>https://img.shields.io/codetally/triggerman722/colorstrap.svg</code></td>
+  </tr>
   <tr><th> bitHound: </th>
     <td><img src='/bithound/code/github/rexxars/sse-channel.svg' alt=''/></td>
     <td><code>https://img.shields.io/bithound/code/github/rexxars/sse-channel.svg</code></td>
