--- a/try.html
+++ b/try.html
@@ -443,6 +443,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/amo/d/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   </tr>
+  <tr><th data-keywords='vscode'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode/installs/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode/installs/ritwickdey.LiveServer.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
@@ -633,6 +637,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Itunes App Store: </th>
     <td><img src='/itunes/v/803453959.svg' alt=''/></td>
     <td><code>https://img.shields.io/itunes/v/BUNDLE_ID.svg</code></td>
+  </tr>
+  <tr><th data-keywords='vscode'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode/version/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode/version/ritwickdey.LiveServer.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -996,6 +1004,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Discord: </th>
     <td><img src='/discord/102860784329052160.svg' alt=''/></td>
     <td><code>https://img.shields.io/discord/102860784329052160.svg</code></td>
+  </tr>
+  <tr><th data-keywords='vscode'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode/rating/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode/rating/ritwickdey.LiveServer.svg</code></td>
   </tr>
 </tbody></table>
 
