--- a/try.html
+++ b/try.html
@@ -586,6 +586,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
   <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
   </tr>
+  <tr><th> Maven Central with version prefix filter: </th>
+  <td><img src='/maven-central/v/org.apache.maven/apache-maven/2.svg' alt=''/></td>
+  <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven/2.svg</code></td>
+  </tr>
   <tr><th> WordPress plugin: </th>
   <td><img src='/wordpress/plugin/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
