--- a/try.html
+++ b/try.html
@@ -447,6 +447,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/amo/d/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   </tr>
+  <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode-marketplace/d/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode-marketplace/d/ritwickdey.LiveServer.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
@@ -641,6 +645,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
   <td><img src='/amo/v/dustman.svg' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
+  </tr>
+  <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode-marketplace/v/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode-marketplace/v/ritwickdey.LiveServer.svg</code></td>
   </tr>
   <tr><th> Itunes App Store: </th>
     <td><img src='/itunes/v/803453959.svg' alt=''/></td>
@@ -1032,6 +1040,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Discord: </th>
     <td><img src='/discord/102860784329052160.svg' alt=''/></td>
     <td><code>https://img.shields.io/discord/102860784329052160.svg</code></td>
+  </tr>
+  <tr><th data-keywords='vscode-marketplace'>Visual Studio Marketplace: </th>
+    <td><img src='/vscode-marketplace/r/ritwickdey.LiveServer.svg' alt=''/></td>
+    <td><code>https://img.shields.io/vscode-marketplace/r/ritwickdey.LiveServer.svg</code></td>
   </tr>
 </tbody></table>
 
