--- a/try.html
+++ b/try.html
@@ -447,6 +447,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/vscode-marketplace/d/ritwickdey.LiveServer.svg' alt=''/></td>
     <td><code>https://img.shields.io/vscode-marketplace/d/ritwickdey.LiveServer.svg</code></td>
   </tr>
+  <tr><th data-keywords='jetbrains plugin'> JetBrains plugins: </th>
+    <td><img src='/jetbrains/plugin/d/1347-scala.svg' alt=''/></td>
+    <td><code>https://img.shields.io/jetbrains/plugin/d/1347-scala.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
