--- a/try.html
+++ b/try.html
@@ -1287,6 +1287,8 @@ is where the current server got started.
   <input class=code id=copyMarkdown>
   </p><p> reStructuredText
   <input class=code id=copyreStructuredText>
+  </p><p> AsciiDoc
+  <input class=code id=copyAsciiDoc>
   </p><div id=copyDoc></div>
 </form>
 </dialog>
@@ -1478,6 +1480,7 @@ function selectNode(e) {
 };
 copyMarkdown.addEventListener('click', selectNode);
 copyreStructuredText.addEventListener('click', selectNode);
+copyAsciiDoc.addEventListener('click', selectNode);
 
 // Markup copier dialog
 //
@@ -1537,8 +1540,10 @@ function markupDialog(tr) {
     }
     var md = '[![' + trname + '](' + img + ')](' + url + ')';
     var rst = '.. image:: ' + img + '   :target: ' + url;
+    var adoc = 'image:' + img + '[' + trname + ']';
     copyMarkdown.value = md;
     copyreStructuredText.value = rst;
+    copyAsciiDoc.value = adoc;
     copyImg.src = img;
   };
   copyForm.url.addEventListener('input', copyFormUrlEventListener);
