--- a/try.html
+++ b/try.html
@@ -858,6 +858,42 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-pr-raw/badges/shields/vendor-badge.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-raw/badges/shields/vendor-badge.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub issue pullrequest detail' data-doc='githubDoc'> GitHub issue state: </th>
+    <td><img src='/github/issues/detail/s/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub issue pullrequest detail' data-doc='githubDoc'> GitHub issue title: </th>
+    <td><img src='/github/issues/detail/s/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/s/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub issue pullrequest detail' data-doc='githubDoc'> GitHub issue author: </th>
+    <td><img src='/github/issues/detail/u/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/u/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub issue pullrqeuest detail' data-doc='githubDoc'> GitHub issue label: </th>
+    <td><img src='/github/issues/detail/label/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/label/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub issue pullrequest detail' data-doc='githubDoc'> GitHub issue comments: </th>
+    <td><img src='/github/issues/detail/comments/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/comments/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub issue pullrequest detail' data-doc='githubDoc'> GitHub issue age: </th>
+    <td><img src='/github/issues/detail/age/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/age/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub issue pullrequest detail' data-doc='githubDoc'> GitHub issue last update: </th>
+    <td><img src='/github/issues/detail/last-update/badges/shields/979.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/detail/last-update/badges/shields/979.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub pullrequest detail check' data-doc='githubDoc'> GitHub pull request check state: </th>
+    <td><img src='/github/pulls/checks/s/badges/shields/1110.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/pulls/checks/s/badges/shields/1110.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub pullrequest detail check' data-doc='githubDoc'> GitHub pull request check contexts: </th>
+    <td><img src='/github/pulls/checks/contexts/badges/shields/1110.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/pulls/checks/contexts/badges/shields/1110.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub contributor' data-doc='githubDoc'> GitHub contributors: </th>
     <td><img src='/github/contributors/cdnjs/cdnjs.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/contributors/cdnjs/cdnjs.svg</code></td>
