--- a/try.html
+++ b/try.html
@@ -458,6 +458,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='jetbrains plugin'> JetBrains plugins: </th>
     <td><img src='/jetbrains/plugin/d/1347-scala.svg' alt=''/></td>
     <td><code>https://img.shields.io/jetbrains/plugin/d/1347-scala.svg</code></td>
+  <tr><th> Ansible Role: </th>
+    <td><img src='/ansible/role/d/3078.svg' alt=''/></td>
+    <td><code>https://img.shields.io/ansible/role/d/3078.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
